KAF-120: Replace String.format with "".formatted()